# Machrozot

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml  railway.toml  run.sh
.github/workflows/: test.yml
assets/: Logo.pptx
backend/: Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 08c6f3bc876f_initial_tables.py  221c5b8d4577_add_feedback_table.py  24afd9deff03_created_at_with_timezone.py  74edc3f2eef5_add_users_and_game_sessions.py  fdbc28081da5_initial_tables.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: feedback.py  puzzle.py  user.py
backend/app/routers/: admin.py  auth.py  feedback.py  progress.py  puzzle.py
backend/app/schemas/: auth.py  feedback.py  puzzle.py
backend/app/services/: auth_service.py  grid_generator.py  hebrew_utils.py  job_store.py  puzzle_service.py  word_solver.py
backend/scripts/: seed_puzzle.py  seed_yafe_einaim.py
backend/tests/: conftest.py  test_admin_router.py  test_auth_router.py  test_feedback_router.py  test_grid_generator.py  test_hebrew_utils.py  test_progress_router.py  test_puzzle_router.py  test_word_solver.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: adminClient.ts  client.ts
frontend/src/components/: AuthButton.tsx  Cell.tsx  CurrentWordBanner.tsx  FeedbackPopup.tsx  Fireworks.tsx  Grid.tsx  HintBar.tsx  SelectionLine.tsx  TutorialScreen.tsx
frontend/src/hooks/: useRequireAdmin.ts  (+1 more)
frontend/tests/: Grid.test.tsx  authStore.test.ts  gameStore.test.ts  persistence.test.ts  progressSync.test.ts  setup.ts  shareUtils.test.ts  useSelection.test.ts
(+16 files in other folders)
